slideshow auto-aspect, align-self possible stretch fix

--- a/src/App.css
+++ b/src/App.css
@@ -1037,7 +1037,7 @@ footer {
 }
 
 .image-grid {
-  align-items: flex-start;
+  align-self: center;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -1046,6 +1046,7 @@ footer {
 }
 
 .image-grid img {
+  align-self: center;
   flex: 1;
   max-width: 100%;
   border: 1px solid #414d96;
@@ -1054,6 +1055,11 @@ footer {
 .akined-process-items {
   display: block;
   margin: 1rem 0;
+}
+
+.akined-slideshow {
+  width: 100%;
+  height: 56.25vw;
 }
 
 .page-container.battlerite .image-grid div:first-child {
@@ -1280,6 +1286,12 @@ footer {
   .akined-process-items .image-container:last-child {
     max-width: 33%;
     margin: 0;
+  }
+
+  .akined-slideshow {
+    max-width: 40%;
+    width: 100%;
+    height: 35vh;
   }
 
   .page-container .page-banner h1 {
